--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "3.3.0"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
